<resources>
    <string name="app_name">Tragether</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="profile">Go to profile!</string>
    <string name="changeUrs">Change user</string>

    <!-- logged activity -->
    <string name="welcome_msg">WELCOME TRAVELER</string>
    <string name="feed">Events based on you travel list</string>

    <!-- profile activity -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_menu_handler">MenuHandler</string>

    <string name="yourTrips">YOUR TRIPS</string>
    <string name="yourEvents">YOUR EVENTS</string>
    <string name="editProfile">Edit profile!</string>
    <string name="addEvent">Add Event</string>

    <!-- edit profile activity -->
    <string name="usrnLabel">Username</string>
    <string name="bdayLabel">Birthday</string>
    <string name="countryLabel">Country</string>
    <string name="interestsLabel">Interests</string>
    <string name="descriptionLabel">Description</string>


    <!-- travel activity -->
    <string name="countryTLabel">Country</string>
    <string name="cityLabel">City</string>
    <string name="startDay">First Day</string>
    <string name="endDay">Last Day</string>

    <!-- event activity -->
    <string name="eventTitleLabel">Event Title</string>
    <string name="eventStartsLabel">Event Starts</string>
    <string name="eventStartTimeLabel">Start Time</string>
    <string name="eventEndTimeLabel">End Time</string>
    <string name="eventEndsLabel">Event Ends</string>
    <string name="eventTagsLabel">Event Tags</string>
    <string name="countryELabel">Event Country</string>
    <string name="cityELabel">Event City</string>
    <string name="tagsELabel">Event Tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
